# meetily

./: CLAUDE.md  Cargo.toml  build-and-install.sh  build-personal.sh
.claude/skills/meetily/: SKILL.md
.github/workflow-docs/: ACCELERATION_GUIDE.md  README_DEVTEST.md  WORKFLOWS_OVERVIEW.md
.hermes/plans/: 2026-05-31_173500-meetily-smart-capture-and-integrations.md
Casks/: meetily.rb
backend/app/: main.py  transcript_processor.py
frontend/: package.json  pnpm-workspace.yaml
frontend/patches/: prosemirror-view@1.41.8.patch
frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
frontend/src-tauri/migrations/: 20260528000000_add_summary_system_prompt.sql  20260528000001_add_summary_intermediate_prompts.sql  20260528000002_add_summary_intermediate_system_prompts.sql
frontend/src-tauri/src/: distributed_notifications.rs  hotkey.rs  key_registry.rs  lib.rs
frontend/src-tauri/src/api/: api.rs  export.rs  (+1 more)
frontend/src/app/: page.tsx
frontend/src/components/: About.tsx  BetaSettings.tsx  FeatureSettings.tsx  LanguageSelection.tsx  MeetingDomainSettings.tsx  ModelQuickSwitcher.tsx  ModelSettingsModal.tsx  PreferenceSettings.tsx  SummaryTemplateManager.tsx  TranscriptSettings.tsx
frontend/src/contexts/: ConfigContext.tsx  TranscriptContext.tsx
frontend/src/hooks/: useModalState.ts  useRecordingStart.ts
frontend/src/services/: configService.ts  transcriptService.ts
frontend/src/types/: betaFeatures.ts  index.ts
meetily-mcp/: Cargo.toml
meetily-mcp/src/: main.rs  protocol.rs  resources.rs  tools.rs
scripts/: download-diarization-model.sh
(+47 files in other folders)
